--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -38,6 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://c119-2405-201-c024-6020-740e-3c76-df00-e405.in.ngrok.io"  
-
+  "proxy": "https://c119-2405-201-c024-6020-740e-3c76-df00-e405.in.ngrok.io"
 }
