--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.5.8",
+    "react-select": "^5.6.0",
+    "react-select-search": "^4.1.5",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
