--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-draggable-list": "^4.1.0",
+    "react-draggable-lists": "^1.0.1",
     "react-hook-form": "^7.36.1",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
