--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react-draggable-list": "^4.1.0",
     "react-draggable-lists": "^1.0.1",
     "react-hook-form": "^7.36.1",
+    "react-loader-spinner": "^5.3.4",
     "react-moment": "^1.1.2",
+    "react-promise-tracker": "^2.1.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-select-search": "^4.1.6",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.0.8",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
