--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-select-search": "^4.1.6",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.0.8",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
